--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-calendar": "^3.8.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-icon": "^1.0.0",
     "react-icons": "^4.4.0",
@@ -17,6 +18,7 @@
     "sass": "^1.54.9",
     "styled-component": "^2.8.0",
     "styled-components": "^5.3.5",
+    "swiper": "^8.4.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
